Revise Community Support

--- a/public/index.html
+++ b/public/index.html
@@ -322,7 +322,7 @@
 
             <li>
               the labour and costs associated with creating and maintaining
-              federated systems and standards
+              federated systems, standards, and shared infrastructure
             </li>
 
             <li>
@@ -343,18 +343,17 @@
               the fediverse in accordance with this charter
             </li>
             <li>
-              at the point of initially federating with the fediverse, an amount
-              according to the prevailing custom in the form of financial securities
-              in the member organization
+              at intervals according to the prevailing custom
             </li>
             <li>
-              and at recurring intervals, an amount according to the prevailing
-              custom, and in consideration of the organization&apos;s financial
-              ability to contribute.
+              with consideration of the organization&apos;s financial ability to contribute
             </li>
             <li>
-              This obligation <em>should</em> be construed to have fiduciary priority over
-              shareholders&apos; rights, as it is intended as a form of voluntary
+              an amount according to the prevailing custom.
+            </li>
+            <li>
+              This obligation <em>should</em> be construed to have a high
+              priority vis other interests, as it is intended as a form of voluntary
               taxation in support of the immense benefits conferred by participating
               in the Fediverse.
             </li>
@@ -381,8 +380,23 @@
             In light of the many diverse possibilities afforded by the fediverse and
             the complex relationship between content created by individuals and
             community-generated datasets, this statement intentionally omits
-            discussion of data portability, copyright, privacy, and any other
-            jurisdictionally necessary questions of legal compliance.
+            discussion of data portability, copyright, privacy, content and
+            community moderation, and any other jurisdictionally necessary
+            questions of legal compliance.
+          </p>
+
+          <p>
+            The omission of the above should <em>in no way</em> be construed to
+            diminish the importance of those subjects and discussions. Rather,
+            each of those topics represents a fundamental topic unto themselves.
+          </p>
+        </section>
+
+        <section>
+          <h1>Links</h1>
+
+          <p>
+            This section is currently empty, and will be populated as and when necessary.
           </p>
         </section>
 
