--- a/public/index.html
+++ b/public/index.html
@@ -134,7 +134,10 @@
     <div class="column">
       <heading>
         <div class="head">
-          <img src="heading.jpg" alt="A photograph of Slocan Lake, British Columbia" />
+          <img
+            src="heading.jpg"
+            alt="A photograph of Slocan Lake, British Columbia"
+          />
           <div class="text">
             <h1>
               Slocan Statement<br />
@@ -149,23 +152,24 @@
           <h1>Preface</h1>
           <p>
             The following is intended as a starting point, a first draft towards
-            establishing a shared charter that would serve to protect, support, and
-            enrich the nascent Fediverse.
+            establishing a shared charter that would serve to protect, support,
+            and enrich the nascent Fediverse.
           </p>
-          
+
           <p>
-            This text is intented to be receied in the spirit of iteration and is
-            presented absent any fundamentalism about the ideas within. We don't have
-            great tools for usable decentralized collaboration on text, so while I
-            have misgivings about placing it in a space that is only accessible by
-            engineers, it is available to be
+            This text is intended to be received in the spirit of iteration and
+            is presented absent any fundamentalism about the ideas within. We
+            don't have great tools for usable decentralized collaboration on
+            text, so while I have misgivings about placing it in a space that is
+            only accessible by engineers, it is available to be
             <a href="https://github.com/blaine/slocan-statement">forked</a>.
           </p>
 
           <p>
-            I encourage anyone to use this text as a basis for their own statement,
-            but my hope is that we can build towards a collective statement for
-            the whole fediverse. I encourage the use of the <b>#slocanstatement</b>
+            I encourage anyone to use this text as a basis for their own
+            statement, but my hope is that we can build towards a collective
+            statement for the whole fediverse. I encourage the use of the
+            <b>#slocanstatement</b>
             hashtag on the Fediverse if you post a derivative work elsewhere.
           </p>
 
@@ -175,22 +179,23 @@
             <br />
             November 19, 2022
           </p>
-        </heading>
+        </section>
 
         <section>
           <h1>A Charter for the Fediverse</h1>
 
           <p>
-            The federation of online services, known as &ldquo;the Fediverse&rdquo;,
-            agree to the following:
+            The federation of online services, known as &ldquo;the
+            Fediverse&rdquo;, agree to the following:
           </p>
 
           <p>
-            By operating a network that connects to the <b>fediverse</b> by way of
-            recognizing and leveraging the <b>freedoms</b> of
+            By operating a network that connects to the <b>fediverse</b> by way
+            of recognizing and leveraging the <b>freedoms</b> of
             <a href="#freedom-identity"><b>online identity</b></a> and
-            <a href="#freedom-communication"><b>communication</b></a> and agreeing
-            to principles of <a href="#interoperability"><b>interoperability</b></a
+            <a href="#freedom-communication"><b>communication</b></a> and
+            agreeing to principles of
+            <a href="#interoperability"><b>interoperability</b></a
             >:
           </p>
 
@@ -198,32 +203,34 @@
             <li>
               <b>We agree to maintain, in perpetuity, an open interface</b> that
               ensures the continuation of these freedoms of online identity and
-              communication in accordance with the principles of interoperability.
+              communication in accordance with the principles of
+              interoperability.
             </li>
             <li>
               <b>We agree that software and standards</b> written to support
               federated systems will be published with
-              <b>licenses and agreements</b> that require adherence to this charter.
+              <b>licenses and agreements</b> that require adherence to this
+              charter.
             </li>
             <li>
-              <b>We agree to obtain necessary license(s)</b> from users in order to
-              <b>permit the redistribution of content</b> created by members across
-              the fediverse provided that correct attribution to the original
-              creator is maintained.
+              <b>We agree to obtain necessary license(s)</b> from users in order
+              to <b>permit the redistribution of content</b> created by members
+              across the fediverse provided that correct attribution to the
+              original creator is maintained.
             </li>
             <li>
               <b>We agree to neither federate nor provide services</b> to any
-              organization that, having agreed to these principles, later withdraws
-              from this charter.
+              organization that, having agreed to these principles, later
+              withdraws from this charter.
             </li>
           </ol>
 
           <p>
             We agree these principles in order to ensure that online
             <b>communities have the autonomy to self-determine</b> and
-            <b>individuals have the ability to freely communicate</b>, free from the
-            tendency of dominant nodes in the network to leverage network effects as
-            a monopolizing strategy.
+            <b>individuals have the ability to freely communicate</b>, free from
+            the tendency of dominant nodes in the network to leverage network
+            effects as a monopolizing strategy.
           </p>
         </section>
 
@@ -232,61 +239,66 @@
 
           <ol>
             <li>
-              The <a name="freedom-identity">freedom of online identity</a> &mdash;
-              to use and present a federated online identity (a &ldquo;Name&rdquo;)
-              to any federated system &mdash; is considered a fundamental right.
+              The
+              <a name="freedom-identity">freedom of online identity</a> &mdash;
+              to use and present a federated online identity (a
+              &ldquo;Name&rdquo;) to any federated system &mdash; is considered
+              a fundamental right.
 
               <ol type="i">
                 <li>
-                  Organizations that grant names to individuals agree to do so in
-                  trust.
+                  Organizations that grant names to individuals agree to do so
+                  in trust.
                 </li>
 
                 <li>
-                  To the extent made possible by protocols or agreement, they will
-                  allow the transfer of the management of an individual&apos;s name
-                  to another federated organization of the individual&apos;s
-                  choosing.
+                  To the extent made possible by protocols or agreement, they
+                  will allow the transfer of the management of an
+                  individual&apos;s name to another federated organization of
+                  the individual&apos;s choosing.
                 </li>
 
                 <li>
                   They agree to make available to the best of their ability the
-                  facilities associated with naming, in particular the ability to
-                  freely perform discovery of the mechanisms for communication.
+                  facilities associated with naming, in particular the ability
+                  to freely perform discovery of the mechanisms for
+                  communication.
                 </li>
               </ol>
             </li>
 
             <li>
               The
-              <a name="freedom-communcation">freedom of communication</a> &mdash;
-              the ability for individuals and communities to share information
-              between federated systems &mdash; is considered a fundamental right.
+              <a name="freedom-communcation">freedom of communication</a>
+              &mdash; the ability for individuals and communities to share
+              information between federated systems &mdash; is considered a
+              fundamental right.
             </li>
 
             <li>
-              The <a name="interoperability">principles of interoperability</a> are
+              The
+              <a name="interoperability">principles of interoperability</a> are
               as follows:
 
               <ol type="i">
                 <li>
-                  The protocols that enable and facilitate federated identity and
-                  federated communication shall be agreed to by independent
+                  The protocols that enable and facilitate federated identity
+                  and federated communication shall be agreed to by independent
                   standards bodies and must be free of legal obligations or
                   copyright or patent claims.
                 </li>
                 <li>
-                  Federated instances agree to conform to the standards in order to
-                  promote the flow of communication, to the extent possible.
+                  Federated instances agree to conform to the standards in order
+                  to promote the flow of communication, to the extent possible.
                 </li>
                 <li>
                   Neither (i) nor (ii) prevent the creation of new standards or
                   approaches to identity or communication
                 </li>
                 <li>
-                  As de-facto standards emerge, they shall be subject to and adhered
-                  to by federated services and software per clause (i) and (ii) of
-                  this section.
+                  As de-facto standards emerge, they shall be subject to and
+                  adhered to by federated services and software per clause (i)
+                  and (ii) of this section.
                 </li>
               </ol>
             </li>
@@ -298,21 +310,20 @@
 
           <aside>
             <p>
-              This section is likely to be the most controversial, however I believe
-              it to be important to include in this first draft as a way of
-              accounting for the immense shared project that is the Fediverse.
+              This section is likely to be the most controversial, however I
+              believe it to be important to include in this first draft as a way
+              of accounting for the immense shared project that is the
+              Fediverse.
             </p>
             <p>
               Many institutions exist that support the free and open internet.
               However, those institutions exist at the will of the organizations
-              that have profited so immensely from the network, not by way of any
-              formal obligation. Furthermore, the Fediverse is an explicitly
-              international project, so national forms of taxation cannot explicitly
-              address this need.
+              that have profited so immensely from the network, not by way of
+              any formal obligation. Furthermore, the Fediverse is an explicitly
+              international project, so national forms of taxation cannot
+              explicitly address this need.
             </p>
-            <p>
-              - b.
-            </p>
+            <p>- b.</p>
           </aside>
 
           <p>In recognition of</p>
@@ -338,24 +349,21 @@
           <ol>
             <li>
               to wholly independent trusts, foundations, or non-profits whose
-              charters are to support the continued maintenance and development of
-              code, policy and legal structures associated with and in support of
-              the fediverse in accordance with this charter
+              charters are to support the continued maintenance and development
+              of code, policy and legal structures associated with and in
+              support of the fediverse in accordance with this charter
             </li>
+            <li>at intervals according to the prevailing custom</li>
             <li>
-              at intervals according to the prevailing custom
+              with consideration of the organization&apos;s financial ability to
+              contribute
             </li>
-            <li>
-              with consideration of the organization&apos;s financial ability to contribute
-            </li>
-            <li>
-              an amount according to the prevailing custom.
-            </li>
+            <li>an amount according to the prevailing custom.</li>
             <li>
               This obligation <em>should</em> be construed to have a high
-              priority vis other interests, as it is intended as a form of voluntary
-              taxation in support of the immense benefits conferred by participating
-              in the Fediverse.
+              priority vis other interests, as it is intended as a form of
+              voluntary taxation in support of the immense benefits conferred by
+              participating in the Fediverse.
             </li>
           </ol>
         </section>
@@ -364,12 +372,13 @@
           <h1>Caveats</h1>
 
           <p>
-            Nothing above should be construed to prevent federated communities from
-            restricting or limiting federation in order to protect themselves or
-            their members against abuse or to apply community standards. However,
-            federated identities must be made available online according to the
-            wishes of the individual, and the ability for any individuals to
-            communicate using their assigned identifiers must not be restricted.
+            Nothing above should be construed to prevent federated communities
+            from restricting or limiting federation in order to protect
+            themselves or their members against abuse or to apply community
+            standards. However, federated identities must be made available
+            online according to the wishes of the individual, and the ability
+            for any individuals to communicate using their assigned identifiers
+            must not be restricted.
           </p>
         </section>
 
@@ -377,9 +386,9 @@
           <h1>Future Considerations</h1>
 
           <p>
-            In light of the many diverse possibilities afforded by the fediverse and
-            the complex relationship between content created by individuals and
-            community-generated datasets, this statement intentionally omits
+            In light of the many diverse possibilities afforded by the fediverse
+            and the complex relationship between content created by individuals
+            and community-generated datasets, this statement intentionally omits
             discussion of data portability, copyright, privacy, content and
             community moderation, and any other jurisdictionally necessary
             questions of legal compliance.
@@ -396,7 +405,8 @@
           <h1>Links</h1>
 
           <p>
-            This section is currently empty, and will be populated as and when necessary.
+            This section is currently empty, and will be populated as and when
+            necessary.
           </p>
         </section>
 
@@ -407,37 +417,45 @@
             This text is intended to represent an initial draft of something
             that sits somewhere between the
             <a href="https://www.franklinstreetstatement.org/">
-              Franklink Street Statement
-            </a>, the <a
-            href="https://www.gnu.org/licenses/gpl-3.0.en.html">GPL</a>, <a
-            href="https://opensource.org/licenses/MIT">MIT</a>, and other <a
-            href="https://en.wikipedia.org/wiki/Free_and_open-source_software">FLOSS
-            licenses</a>, and the intent of
-            the <a href="https://creativecommons.org/">Creative Commons</a>
+              Franklin Street Statement </a
+            >, the
+            <a href="https://www.gnu.org/licenses/gpl-3.0.en.html">GPL</a>,
+            <a href="https://opensource.org/licenses/MIT">MIT</a>, and other
+            <a
+              href="https://en.wikipedia.org/wiki/Free_and_open-source_software"
+              >FLOSS licenses</a
+            >, and the intent of the
+            <a href="https://creativecommons.org/">Creative Commons</a>
             project, but with the specific intent of providing a
-            <em>treaty basis</em> for federated networked culture and communities.
+            <em>treaty basis</em> for federated networked culture and
+            communities.
           </p>
           <p>
-            To that end, in offering this statement, my hope is that we can arrive
-            at something that looks like the
-            <a href="https://www.ohchr.org/en/human-rights/universal-declaration/translations/english">
+            To that end, in offering this statement, my hope is that we can
+            arrive at something that looks like the
+            <a
+              href="https://www.ohchr.org/en/human-rights/universal-declaration/translations/english"
+            >
               UN Declaration of Human Rights
-            </a> and the
-            <a href="https://www.ohchr.org/en/instruments-mechanisms/instruments/convention-rights-child">
-              Convention on the Rights of the Child
-            </a>, but with specific application to online communities.
+            </a>
+            and the
+            <a
+              href="https://www.ohchr.org/en/instruments-mechanisms/instruments/convention-rights-child"
+            >
+              Convention on the Rights of the Child </a
+            >, but with specific application to online communities.
           </p>
 
           <p>
-            I would also like to acknowledge that I live and work on the traditional,
-            ancestral and unceded territory of Sinixt Peoples. I make this
-            acknowledgment to show my respect for the tmxʷulaʔxʷ (homeland), and
-            <a href="https://bloodoflifecollective.org/sinixt.html">Sinixt
-            Nation</a>. I feel privileged and grateful to be here, and I
-            invite those reading this to explore their own relationship to
-            place.
+            I would also like to acknowledge that I live and work on the
+            traditional, ancestral and unceded territory of Sinixt Peoples. I
+            make this acknowledgment to show my respect for the tmxʷulaʔxʷ
+            (homeland), and
+            <a href="https://bloodoflifecollective.org/sinixt.html"
+              >Sinixt Nation</a
+            >. I feel privileged and grateful to be here, and I invite those
+            reading this to explore their own relationship to place.
           </p>
-
         </section>
       </main>
     </div>
