--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,11 @@
   <head>
     <title>Slocan Statement</title>
     <style>
+      @font-face {
+        font-family: "BCSans";
+        src: url("BCSans-Regular.woff") format("woff");
+      }
+
       body {
         margin: 0;
         padding: 0;
@@ -9,9 +14,14 @@
         line-height: 1.4;
         font-size: 18px;
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-          "Helvetica Neue", "Noto Sans", sans-serif;
+          "Helvetica Neue", "BCSans", "Noto Sans", sans-serif;
         color: #444;
         background-color: #fff;
+      }
+
+      .bcsans {
+        font-weight: normal;
+        font-family: "BCSans";
       }
 
       .column {
@@ -449,7 +459,7 @@
           <p>
             I would also like to acknowledge that I live and work on the
             traditional, ancestral and unceded territory of Sinixt Peoples. I
-            make this acknowledgment to show my respect for the tmxʷulaʔxʷ
+            make this acknowledgment to show my respect for the <span class="bcsans">tmxʷulaʔxʷ</span>
             (homeland), and
             <a href="https://bloodoflifecollective.org/sinixt.html"
               >Sinixt Nation</a
