fix encoding/font issues

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,33 @@
 <html>
   <head>
     <title>Slocan Statement</title>
+    <meta charset="UTF-8" />
     <style>
+
       @font-face {
-        font-family: "BCSans";
-        src: url("BCSans-Regular.woff") format("woff");
+        font-family: 'BCSans';
+        font-style: normal;
+        src: url('fonts/BCSans-Regular.woff2') format('woff2'), /* Optimized for very modern browsers */
+            url('fonts/BCSans-Regular.woff') format('woff'); /* Modern Browsers */
+      }
+      @font-face {
+        font-family: 'BCSans';
+        font-style: italic;
+        src: url('fonts/BCSans-Italic.woff2') format('woff2'), /* Optimized for very modern browsers */
+            url('fonts/BCSans-Italic.woff') format('woff'); /* Modern Browsers */
+      }
+      @font-face {
+        font-family: 'BCSans';
+        font-weight: 700;
+        src: url('fonts/BCSans-Bold.woff2') format('woff2'), /* Optimized for very modern browsers */
+            url('fonts/BCSans-Bold.woff') format('woff'); /* Modern Browsers */
+      }
+      @font-face {
+        font-family: 'BCSans';
+        font-style: italic;
+        font-weight: 700;
+        src: url('fonts/BCSans-BoldItalic.woff2') format('woff2'), /* Optimized for very modern browsers */
+            url('fonts/BCSans-BoldItalic.woff') format('woff'); /* Modern Browsers */
       }
 
       body {
@@ -17,11 +40,6 @@
           "Helvetica Neue", "BCSans", "Noto Sans", sans-serif;
         color: #444;
         background-color: #fff;
-      }
-
-      .bcsans {
-        font-weight: normal;
-        font-family: "BCSans";
       }
 
       .column {
@@ -459,7 +477,7 @@
           <p>
             I would also like to acknowledge that I live and work on the
             traditional, ancestral and unceded territory of Sinixt Peoples. I
-            make this acknowledgment to show my respect for the <span class="bcsans">tmxʷulaʔxʷ</span>
+            make this acknowledgment to show my respect for the tmxʷulaʔxʷ
             (homeland), and
             <a href="https://bloodoflifecollective.org/sinixt.html"
               >Sinixt Nation</a
