--- a/public/index.html
+++ b/public/index.html
@@ -197,7 +197,7 @@
             I encourage anyone to use this text as a basis for their own
             statement, but my hope is that we can build towards a collective
             statement for the whole fediverse. I encourage the use of the
-            <b>#slocanstatement</b>
+            <b>#SlocanStatement</b>
             hashtag on the Fediverse if you post a derivative work elsewhere.
           </p>
 
