tithe means 10%, which I didn't know. TIL! Changing to "contribute" as it's a suitably generic word. Thanks, jesse@metasocial.com & cscott@kolektiva.social

--- a/public/index.html
+++ b/public/index.html
@@ -371,7 +371,7 @@
 
           <p>
             commercial federated services that agree to this convention agree to
-            tithe
+            contribute
           </p>
 
           <ol>
